
2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Applied Debian patch 409_man_generate_from_PO to
	automatically generate the translated manpages from the POs.
	* man/Makefile.am: Replace the individual rules for the generation
	of the manpages (from XML) by a generic Makefile rule an
	dependencies for the linked manpages.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Document that chpasswd does not use PAM to
	update the passwords. This fixes http://bugs.debian.org/396726.
	Debian patch 411_chpasswd_document_no_pam.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: Avoid terminating the PAM library in the forked
	child.  This is done later in the parent after closing the PAM
	session. This fixes http://bugs.debian.org/412061.
	Debian patch 405_su_no_pam_end_before_exec.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newgrp.1.xml: Mention sg in the newgrp manpage.
	This fixes http://bugs.debian.org/396690.
	Debian patch 410_newgrp_man_mention_sg.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Fix typo: the warndays option was called warning.
	This is now warndays, as documented in the manpage and usage.
	This fixes http://bugs.debian.org/445481.
	Debian patch 417_passwd_warndays.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/pwck.c: Remove the preprocessor check SHADOWPWD. The
	variable is no more defined (and always assumed).
	Debian patch 493_pwck_no_SHADOWPWD.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/passwd.c, man/passwd.1.xml: -l/-u options: edit the
	shadow account expiry field *in addition* to editing the password
	field.  This fixes http://bugs.debian.org/389183.
	Debian patch 494_passwd_lock.

2007-11-17  Nicolas François  <nicolas.francois@centraliens.net>
