@@ -53,3 +53,6 @@ endif
 EXTRA_DIST = \
 	$(man_MANS) \
 	$(man_nopam)
+
+include ../generate_translations.mak
+
